Code: Prepare the datasets with different cuts

--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -11,6 +11,7 @@
     "import shutil\n",
     "import numpy as np\n",
     "\n",
+    "from pathlib import Path\n",
     "from utils import phi_shift_and_flipping\n",
     "\n",
     "MAX_CONSTI = {\n",
@@ -76,42 +77,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def split_SR_BR_mjj(h5_path, output_path, mjj_cut=300):\n",
-    "\n",
+    "def split_SR_BR(h5_path, output_path, cut_type='mjj', cut_value=300):\n",
     "    # read data\n",
     "    with h5py.File(h5_path, 'r') as f:\n",
-    "        mjj = f['EVENT/mjj'][:]\n",
     "\n",
-    "        SR_range = mjj > mjj_cut\n",
-    "        BR_range = mjj < mjj_cut\n",
+    "        mjj = f[f'EVENT/mjj'][:]\n",
+    "        deta = f[f'EVENT/deta'][:]\n",
+    "        if cut_type == 'mjj':\n",
+    "            SR_range = mjj > cut_value\n",
+    "            BR_range = mjj < cut_value\n",
+    "        elif cut_type == 'deta':\n",
+    "            SR_range = deta > cut_value\n",
+    "            BR_range = deta < cut_value\n",
+    "        elif cut_type == 'mjj_deta':\n",
+    "            SR_range = (mjj > cut_value[0]) & (deta > cut_value[1])\n",
+    "            BR_range = (mjj < cut_value[0]) | (deta < cut_value[1])\n",
+    "        else:\n",
+    "            raise ValueError(f'cut_type {cut_type} not supported')\n",
+    "\n",
     "        \n",
     "        root, _ = os.path.splitext(output_path)\n",
-    "        SR_path = f'{root}_in_SR.h5'\n",
-    "        BR_path = f'{root}_in_BR.h5'\n",
-    "\n",
-    "        with h5py.File(SR_path, 'w') as f_SR, h5py.File(BR_path, 'w') as f_SB:\n",
-    "\n",
-    "            create_dataset(f_SR, SR_range.sum(), MAX_CONSTI)\n",
-    "            create_dataset(f_SB, BR_range.sum(), MAX_CONSTI)\n",
-    "\n",
-    "            keys = get_dataset_keys(f_SR)\n",
-    "\n",
-    "            for key in keys:\n",
-    "                f_SR[key][:] = f[key][:][SR_range]\n",
-    "                f_SB[key][:] = f[key][:][BR_range]\n",
-    "\n",
-    "\n",
-    "def split_SR_BR_deta(h5_path, output_path, deta_cut=3.1):\n",
-    "\n",
-    "    # read data\n",
-    "    with h5py.File(h5_path, 'r') as f:\n",
-    "        mjj = f['EVENT/mjj'][:]\n",
-    "        deta = f['EVENT/deta'][:]\n",
-    "\n",
-    "        SR_range = deta > deta_cut\n",
-    "        BR_range = deta < deta_cut\n",
-    "        \n",
-    "        root, _ = os.path.splitext(output_path)\n",
+    "        output_path = Path(output_path)\n",
+    "        output_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "        root = output_path.with_suffix('')\n",
     "        SR_path = f'{root}_in_SR.h5'\n",
     "        BR_path = f'{root}_in_BR.h5'\n",
     "\n",
@@ -123,32 +111,7 @@
     "            keys = get_dataset_keys(f_SR)\n",
     "            for key in keys:\n",
     "                f_SR[key][:] = f[key][:][SR_range]\n",
-    "                f_SB[key][:] = f[key][:][BR_range]\n",
-    "\n",
-    "\n",
-    "def split_SR_BR_mjj_deta(h5_path, output_path, mjj_cut=300, deta_cut=3.1):\n",
-    "\n",
-    "    # read data\n",
-    "    with h5py.File(h5_path, 'r') as f:\n",
-    "        mjj = f['EVENT/mjj'][:]\n",
-    "        deta = f['EVENT/deta'][:]\n",
-    "\n",
-    "        SR_range = (mjj > mjj_cut) & (deta > deta_cut)\n",
-    "        BR_range = (mjj < mjj_cut) & (deta < deta_cut)\n",
-    "        \n",
-    "        root, _ = os.path.splitext(output_path)\n",
-    "        SR_path = f'{root}_in_SR.h5'\n",
-    "        BR_path = f'{root}_in_BR.h5'\n",
-    "\n",
-    "        with h5py.File(SR_path, 'w') as f_SR, h5py.File(BR_path, 'w') as f_SB:\n",
-    "\n",
-    "            create_dataset(f_SR, SR_range.sum(), MAX_CONSTI)\n",
-    "            create_dataset(f_SB, BR_range.sum(), MAX_CONSTI)\n",
-    "\n",
-    "            keys = get_dataset_keys(f_SR)\n",
-    "            for key in keys:\n",
-    "                f_SR[key][:] = f[key][:][SR_range]\n",
-    "                f_SB[key][:] = f[key][:][BR_range]"
+    "                f_SB[key][:] = f[key][:][BR_range]\n"
    ]
   },
   {
@@ -157,13 +120,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cut_type = 'mjj'\n",
+    "cut_value = 300\n",
+    "\n",
     "h5_path = 'data/GGF-03.h5'\n",
     "output_path = 'data/mjj_cut/GGF.h5'\n",
-    "split_SR_BR_mjj(h5_path, output_path)\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
     "h5_path = 'data/VBF-03.h5'\n",
     "output_path = 'data/mjj_cut/VBF.h5'\n",
-    "split_SR_BR_mjj(h5_path, output_path)"
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'deta'\n",
+    "cut_value = 3.1\n",
+    "\n",
+    "h5_path = 'data/GGF-03.h5'\n",
+    "output_path = 'data/deta_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF-03.h5'\n",
+    "output_path = 'data/deta_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cut_type = 'mjj_deta'\n",
+    "cut_value = (300, 3.1)\n",
+    "\n",
+    "h5_path = 'data/GGF-03.h5'\n",
+    "output_path = 'data/mjj_deta_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF-03.h5'\n",
+    "output_path = 'data/mjj_deta_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
   },
   {
@@ -175,11 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def to_event_image_h5(h5_path, out_h5):\n",
+    "    \n",
+    "    out_h5 = Path(out_h5)\n",
+    "    out_h5.parent.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    shutil.copyfile(h5_path, out_h5)\n",
     "\n",
@@ -199,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "./data/mjj_cut/pre-processing/VBF_in_SR.h5\n",
-      "./data/mjj_cut/pre-processing/VBF_in_BR.h5\n",
-      "./data/mjj_cut/pre-processing/GGF_in_SR.h5\n",
-      "./data/mjj_cut/pre-processing/GGF_in_BR.h5\n"
+      "data/mjj_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/mjj_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/mjj_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/mjj_cut/pre-processing/GGF_in_BR.h5\n"
      ]
     }
    ],
@@ -217,6 +222,38 @@
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/mjj_cut/{name}.h5'\n",
     "    out_h5 = f'./data/mjj_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data/deta_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/deta_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/deta_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/deta_cut/pre-processing/GGF_in_BR.h5\n",
+      "data/mjj_deta_cut/pre-processing/VBF_in_SR.h5\n",
+      "data/mjj_deta_cut/pre-processing/VBF_in_BR.h5\n",
+      "data/mjj_deta_cut/pre-processing/GGF_in_SR.h5\n",
+      "data/mjj_deta_cut/pre-processing/GGF_in_BR.h5\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/deta_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/deta_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/mjj_deta_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/mjj_deta_cut/pre-processing/{name}.h5'\n",
     "    to_event_image_h5(h5_path, out_h5)"
    ]
   },
@@ -229,32 +266,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "python pixelation.py ./data/mjj_cut/pre-processing/VBF_in_SR.h5 ./data/mjj_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
-      "python pixelation.py ./data/mjj_cut/pre-processing/VBF_in_BR.h5 ./data/mjj_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
-      "python pixelation.py ./data/mjj_cut/pre-processing/GGF_in_SR.h5 ./data/mjj_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
-      "python pixelation.py ./data/mjj_cut/pre-processing/GGF_in_BR.h5 ./data/mjj_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+      "python pixelation.py data/mjj_cut/pre-processing/VBF_in_SR.h5 data/mjj_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_cut/pre-processing/VBF_in_BR.h5 data/mjj_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_cut/pre-processing/GGF_in_SR.h5 data/mjj_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_cut/pre-processing/GGF_in_BR.h5 data/mjj_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
      ]
     }
    ],
    "source": [
     "res = 40\n",
-    "h5_dir = './data/mjj_cut/pre-processing'\n",
-    "npy_dir = f'./data/mjj_cut/pre-processing/{res}x{res}'\n",
+    "h5_dir = Path('./data/mjj_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/mjj_cut/pre-processing/{res}x{res}')\n",
     "\n",
     "# create output directory\n",
-    "if not os.path.exists(npy_dir):\n",
-    "    os.makedirs(npy_dir)\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
-    "    h5_path = os.path.join(h5_dir, f'{name}.h5')\n",
-    "    npy_path = os.path.join(npy_dir, f'{name}.npy')\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/deta_cut/pre-processing/VBF_in_SR.h5 data/deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/VBF_in_BR.h5 data/deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/GGF_in_SR.h5 data/deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/deta_cut/pre-processing/GGF_in_BR.h5 data/deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/deta_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/deta_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
+    "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
+    "    print(cmd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/VBF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/VBF_in_BR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_SR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_SR.npy 40 &\n",
+      "python pixelation.py data/mjj_deta_cut/pre-processing/GGF_in_BR.h5 data/mjj_deta_cut/pre-processing/40x40/GGF_in_BR.npy 40 &\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = 40\n",
+    "h5_dir = Path('./data/mjj_deta_cut/pre-processing')\n",
+    "npy_dir = Path(f'./data/mjj_deta_cut/pre-processing/{res}x{res}')\n",
+    "\n",
+    "# create output directory\n",
+    "npy_dir.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = h5_dir / f'{name}.h5'\n",
+    "    npy_path = npy_dir / f'{name}.npy'\n",
     "    cmd = f'python pixelation.py {h5_path} {npy_path} {res} &'\n",
     "    print(cmd)"
    ]
