--- a/Note/note.tex
+++ b/Note/note.tex
@@ -62,6 +62,10 @@
 %
 \graphicspath{{../figures/}}
 
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usetikzlibrary{calc}
+
 \usepackage{listings}
 \usepackage{lstautogobble}
 \lstset{
@@ -273,6 +277,72 @@
             }
         \end{table}
     % subsection mixed_datasets (end)
+    \subsection{Training CNN}% (fold)
+    \label{sub:training_cnn}
+        The total sample sizes are mentioned in section~\ref{sub:mixed_datasets}. We allocate 80\% of the data for training and 20\% for validation. The testing set consists of the SR's 10,000 VBF and 10,000 GGF events.
+
+        The convolutional neural network (CNN) model structure is summarized in figure~\ref{fig:cnn_model_structure}. The internal node uses the rectified linear unit (ReLU) as the activation function. The loss function is the binary cross-entropy. The \verb|Adam| optimizer minimizes the loss value. The learning rate is $10^{-4}$, and the batch size is 512. We employ the early stopping technique to prevent over-training issues with a patience of 10.
+        \begin{figure}[htpb]
+            \centering
+            \begin{tikzpicture}[
+                layer/.style={draw, rounded corners, minimum width=2.5cm, text centered},
+                arrow/.style={-stealth, thick},
+                node distance=0.25cm,
+            ]
+            % Input layer
+            \node (input) [layer, fill=blue!20,] {Input: $40 \times 40 \times 3$};
+
+            % Jet 1 layers
+            \node (bn1) [below=of input, layer, fill=purple!20] {BatchNorm};
+
+
+            % Conv1_1 layer positioned between bn1 and bn2
+            \node (conv1_1) [below=0.25cm of bn1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
+
+            % Other Conv layers
+            \node (conv2_1) [below=of conv1_1, layer, fill=green!20] {Conv2D 64, $5 \times 5$, MaxPool $2 \times 2$};
+            \node (conv3_1) [below=of conv2_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$, MaxPool $2 \times 2$};
+            \node (conv4_1) [below=of conv3_1, layer, fill=green!20] {Conv2D 128, $3 \times 3$};
+
+            % Dense layers
+            \node (flatten1) [below=of conv4_1, layer, fill=pink!20] {Flatten};
+            \node (dense1_1) [below=of flatten1, layer, fill=red!20] {Dense 128};
+            \node (dense2_1) [below=of dense1_1, layer, fill=red!20] {Dense 128};
+            \node (dense3_1) [below=of dense2_1, layer, fill=red!20] {Dense 128};
+            \node (output1) [below=of dense3_1, layer, fill=red!20] {Dense (Output layer) 1};
+
+
+            % Arrows for BN
+            \draw [arrow] (input) -- (bn1);
+            \draw [arrow] (bn1) -- (conv1_1);
+            \draw [arrow] (conv1_1) -- (conv2_1);
+            \draw [arrow] (conv2_1) -- (conv3_1);
+            \draw [arrow] (conv3_1) -- (conv4_1);
+            \draw [arrow] (conv4_1) -- (flatten1);
+            \draw [arrow] (flatten1) -- (dense1_1);
+            \draw [arrow] (dense1_1) -- (dense2_1);
+            \draw [arrow] (dense2_1) -- (dense3_1);
+            \draw [arrow] (dense3_1) -- (output1);
+
+            \end{tikzpicture}
+            \caption{The architecture of the CNN model with key hyperparameters.}
+            \label{fig:cnn_model_structure}
+        \end{figure}
+
+        The training results are summarized in table~\ref{tab:CWoLa_CNN_training_results}. The performance of the $m_{jj}$ and $\Delta\eta_{jj}$ cuts is similar. However, when both cuts are applied together, the performance is slightly worse than when applying either cut individually.
+        \begin{table}[htpb]
+            \centering
+            \caption{The CNN training results. The ACC and AUC are evaluated based on 10 trainings. The selection cuts of $m_{jj} > \text{300 GeV}$ and $\Delta\eta_{jj} > 3.1$ are applied.}
+            \label{tab:CWoLa_CNN_training_results}
+            \begin{tabular}{l|cc|cc}
+                                          & \multicolumn{2}{c|}{$M_1 / M_2$}      & \multicolumn{2}{c}{$S / B$}           \\ \hline
+                Cut                       & ACC               & AUC               & ACC               & AUC               \\ \hline
+                $m_{jj}$                  & $0.781 \pm 0.015$ & $0.750 \pm 0.047$ & $0.587 \pm 0.010$ & $0.616 \pm 0.015$ \\
+                $\Delta\eta_{jj}$         & $0.796 \pm 0.020$ & $0.804 \pm 0.046$ & $0.586 \pm 0.011$ & $0.606 \pm 0.015$ \\
+                $m_{jj}, \Delta\eta_{jj}$ & $0.774 \pm 0.026$ & $0.747 \pm 0.063$ & $0.556 \pm 0.020$ & $0.574 \pm 0.027$
+            \end{tabular}
+        \end{table}
+    % subsection training_cnn (end)
 % section sample_preparation (end)
 \bibliographystyle{ieeetr}
 \bibliography{reference}
