Code: Prepare more training samples

--- a/Sample/process_h5_sample.ipynb
+++ b/Sample/process_h5_sample.ipynb
@@ -14,6 +14,8 @@
     "from pathlib import Path\n",
     "from utils import phi_shift_and_flipping\n",
     "\n",
+    "import utils_HDF5 as utils_h5\n",
+    "\n",
     "MAX_CONSTI = {\n",
     "    'Jet': 50,\n",
     "    'Tower': 250,\n",
@@ -26,12 +28,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Split SR (VBF) and BR (GGF) samples "
+    "# Merge GGF & VBF samples"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "'./data/GGF-03.h5' and ('./data/GGF-04.h5',) are same structure, can be merged.\n",
+      "./data/GGF-03_merged.h5 not exist. Copy ./data/GGF-03.h5 to ./data/GGF-03_merged.h5\n",
+      "Size of ./data/GGF-03.h5: 81263\n",
+      "Size of ./data/GGF-04.h5: 81066\n",
+      "Size of ./data/GGF-03_merged.h5: 162329\n",
+      "'./data/VBF-03.h5' and () are same structure, can be merged.\n",
+      "./data/VBF-03_merged.h5 not exist. Copy ./data/VBF-03.h5 to ./data/VBF-03_merged.h5\n",
+      "Size of ./data/VBF-03.h5: 332187\n"
+     ]
+    }
+   ],
+   "source": [
+    "files = [f'./data/GGF-{i:02}.h5' for i in range(3, 5)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/GGF.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)\n",
+    "\n",
+    "files = [f'./data/VBF-{i:02}.h5' for i in range(3, 4)]\n",
+    "\n",
+    "merged_file = utils_h5.merge_h5_file(*files)\n",
+    "new_name = './data/VBF.h5'\n",
+    "\n",
+    "os.rename(merged_file, new_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split SR (VBF) and BR (GGF) samples "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,37 +161,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "cut_type = 'mjj'\n",
     "cut_value = 300\n",
     "\n",
-    "h5_path = 'data/GGF-03.h5'\n",
+    "h5_path = 'data/GGF.h5'\n",
     "output_path = 'data/mjj_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
-    "h5_path = 'data/VBF-03.h5'\n",
+    "h5_path = 'data/VBF.h5'\n",
     "output_path = 'data/mjj_cut/VBF.h5'\n",
-    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cut_type = 'deta'\n",
-    "cut_value = 3.1\n",
-    "\n",
-    "h5_path = 'data/GGF-03.h5'\n",
-    "output_path = 'data/deta_cut/GGF.h5'\n",
-    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
-    "\n",
-    "h5_path = 'data/VBF-03.h5'\n",
-    "output_path = 'data/deta_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
   },
@@ -156,14 +183,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cut_type = 'deta'\n",
+    "cut_value = 3.1\n",
+    "\n",
+    "h5_path = 'data/GGF.h5'\n",
+    "output_path = 'data/deta_cut/GGF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
+    "\n",
+    "h5_path = 'data/VBF.h5'\n",
+    "output_path = 'data/deta_cut/VBF.h5'\n",
+    "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cut_type = 'mjj_deta'\n",
     "cut_value = (300, 3.1)\n",
     "\n",
-    "h5_path = 'data/GGF-03.h5'\n",
+    "h5_path = 'data/GGF.h5'\n",
     "output_path = 'data/mjj_deta_cut/GGF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)\n",
     "\n",
-    "h5_path = 'data/VBF-03.h5'\n",
+    "h5_path = 'data/VBF.h5'\n",
     "output_path = 'data/mjj_deta_cut/VBF.h5'\n",
     "split_SR_BR(h5_path, output_path, cut_type, cut_value)"
    ]
@@ -177,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,26 +259,7 @@
       "data/mjj_cut/pre-processing/VBF_in_SR.h5\n",
       "data/mjj_cut/pre-processing/VBF_in_BR.h5\n",
       "data/mjj_cut/pre-processing/GGF_in_SR.h5\n",
-      "data/mjj_cut/pre-processing/GGF_in_BR.h5\n"
-     ]
-    }
-   ],
-   "source": [
-    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
-    "    h5_path = f'./data/mjj_cut/{name}.h5'\n",
-    "    out_h5 = f'./data/mjj_cut/pre-processing/{name}.h5'\n",
-    "    to_event_image_h5(h5_path, out_h5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "data/mjj_cut/pre-processing/GGF_in_BR.h5\n",
       "data/deta_cut/pre-processing/VBF_in_SR.h5\n",
       "data/deta_cut/pre-processing/VBF_in_BR.h5\n",
       "data/deta_cut/pre-processing/GGF_in_SR.h5\n",
@@ -246,6 +272,11 @@
     }
    ],
    "source": [
+    "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
+    "    h5_path = f'./data/mjj_cut/{name}.h5'\n",
+    "    out_h5 = f'./data/mjj_cut/pre-processing/{name}.h5'\n",
+    "    to_event_image_h5(h5_path, out_h5)\n",
+    "\n",
     "for name in ['VBF_in_SR', 'VBF_in_BR', 'GGF_in_SR', 'GGF_in_BR']:\n",
     "    h5_path = f'./data/deta_cut/{name}.h5'\n",
     "    out_h5 = f'./data/deta_cut/pre-processing/{name}.h5'\n",
